Refatora testes e ajusta formatação no código, incluindo melhorias na legibilidade e consistência